[package]
name = "solana_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros", "json"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "1.0.1"
rand = "0.7"
bs58 = "0.4"
base64 = "0.21"
solana-sdk = "1.17"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
